		  file. It's value, the download active time, can now be seen
		  in the file details dialog.
		* Added the DLACTIVETIME variable to the list of replaced
		  variables in the DowloadCompleted user event.
		* MuleTrayIcon.cpp was not compiling for __WXMAC_CARBON__.
		  Seems to be fixed, but must be the code now has a lot of
		  ifdefs and must be tested on other platforms.

	spiralvoice:
		* Patch to enable MLDonkey os_info support.


--------------------------------------------------------------------------------

Version 2.2.0 - The "So what? If it's new, it has to be good" version
----------
2007-xx-xx

	Special Thanks to:
		* Mr Tyler Durden, for his words of wisdom.

--------------------------------------------------------------------------------

Version 2.1.3 - The "We missed the 6/6/6 devil release and we're very sad" version
----------
2006-06-11

	GonoszTopi:
		* Fixed windows compilation, that was still broken.
		* Fixed locale bug. See http://forum.amule.org/thread.php?threadid=10178&sid=

	ken:
		* Fixed control-clicking (right-clicking) on tabs in notebooks on the
		  Mac.
		* Fixed SmartLowID checks based on a patch/report by eyalzo.

	Kry:
		* Fixed GonozsTopi's fix for locale bug (double init).
		* Added script to import mldonkey downloads into aMule.
		* Fixed "0000867: French traduction is uncorrect grammatically".

	rene06:
		* Allow amulecmd to execute a global, local or kad search. Then
		  you can get the results, which are shown in a list. From that
		  list you can choose one file to download.

	Special Thanks to:
		* Me, because I'm the only one bothering to compile the changelogs. Go me!

--------------------------------------------------------------------------------

Version 2.1.2 - The "We're on fire!" version
----------
2006-03-28

	GonoszTopi:
		* Fixed some warning messages.
		* Fixed windows compilation.
		* Fixed compilation in release mode.

	Kry:
		* Fixed initialization of Partfile, Server and Knownfile objects 